--- a/templates/temp.html
+++ b/templates/temp.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title> {{ foo }} </title>
+		<title> {{ title }} </title>
 	</head>
 	<body>
-		{% for item in collection %}
-			{{ item }}
-			<br>
-		{% endfor %}
+		<center><font size="40sp"> {{ Message }} </font></center>
 	</body>
 </html>
